; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_stmt.c_jump.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_stmt.c_jump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@JUMP = common dso_local global i64 0, align 8
@V = common dso_local global i64 0, align 8
@ADDRG = common dso_local global i64 0, align 8
@voidptype = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @jump(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.TYPE_4__* @findlabel(i32 %4)
  store %struct.TYPE_4__* %5, %struct.TYPE_4__** %3, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = add nsw i32 %8, 1
  store i32 %9, i32* %7, align 4
  %10 = load i64, i64* @JUMP, align 8
  %11 = load i64, i64* @V, align 8
  %12 = add nsw i64 %10, %11
  %13 = load i64, i64* @ADDRG, align 8
  %14 = load i32, i32* @voidptype, align 4
  %15 = call i64 @ttob(i32 %14)
  %16 = add nsw i64 %13, %15
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %18 = call i32* @newnode(i64 %16, i32* null, i32* null, %struct.TYPE_4__* %17)
  %19 = call i32* @newnode(i64 %12, i32* %18, i32* null, %struct.TYPE_4__* null)
  ret i32* %19
}

declare dso_local %struct.TYPE_4__* @findlabel(i32) #1

declare dso_local i32* @newnode(i64, i32*, i32*, %struct.TYPE_4__*) #1

declare dso_local i64 @ttob(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
